# dashhtmlgrid

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
dev_tools/: environment.yml
docs/: data_science_guidance.md  visualization_architecture.puml
src/dashhtmlgrid/: __init__.py  __main__.py  calculation.py  data_table.py  dropdown.py  flask_app.py  html_layout.py  plt_children.py  textarea_with_submit.py
src/dashhtmlgrid/common/: visualization.py
src/dashhtmlgrid/services/TemplateCode/: TemplateCode.py
src/dashhtmlgrid/services/dtf/: dtf.py
src/dashhtmlgrid/services/dtf/templates/dtf/: contact.html  index.html  services.html
src/dashhtmlgrid/services/example_SPA/: example_SPA.py
src/dashhtmlgrid/services/example_blueprint/: example_blueprint.py
src/dashhtmlgrid/static/css/: bootstrap-theme.min.css  d3.css  navbar-top-fixed.css  styles.css  styles_reference.css
src/dashhtmlgrid/static/js/: d3_reusables.js  web_utilities.js
src/dashhtmlgrid/templates/: appMenuItemsHorizontal.html  appMenuItemsVertical.html  footer.html  header.html  logo.html  projectbase.html  sidebar.html  staticFiles.html
src/dashhtmlgrid/tests/: data_table.py  data_table_with_call_back.py  dropdown.py  example_stock_data.py  html_layout.py  plotly_dash_dropdown_graph.py  plt_children.py  test_data.py  test_data_table_with_call_back.py  test_dropdown_multiple_1.py  test_dropdown_multiple_abstracted.py  test_dropdown_multiple_chart_table.py  test_dropdown_multiple_options.py  test_dropdown_single_option.py  test_example_data_table.py  test_flask_example_1.py  test_htmlgrid_textarea_submit_2.py  test_htmlgrid_textarea_submit_figures.py  test_htmlgrid_textarea_submit_table.py  test_htmlgrid_textarea_submit_with_table.py  test_simple_textarea_with_echo.py  test_textarea_with_submit.py  test_visualizations.py
src/dashhtmlgrid/tests/templates/: chartsajax.html
(+4 files in other folders)
